fixed CSS, now the timeline aligns with the events

--- a/front/insaccess/public/style.scss
+++ b/front/insaccess/public/style.scss
@@ -2,8 +2,8 @@
     --numDays: 5;
     --numSubHours: 124;
     --numHours: 7;
-    --timeHeight: 60px;
-    --subTimeHeight: 5px;
+    --timeHeight: 5rem;
+    --subTimeHeight: 0.25rem;
     --calBgColor: #fff1f8;
     --eventBorderColor: #f2d3d8;
     --eventColor1: #57caff;
@@ -21,7 +21,7 @@
   
   .timeline {
     display: grid;
-    grid-template-rows: repeat(var(--numHours), var(--timeimeHeight));
+    grid-template-rows: repeat(var(--numHours), var(--timeHeight));
   }
   
   .days {
@@ -47,11 +47,11 @@
     border: 1px solid var(--eventBorderColor);
     border-radius: 5px;
     padding: 0.5rem;
-    margin: 0.35rem 0.5rem;
+    margin: 0 0.5rem;
     background: white;
   }
   
-  .space,
+  .spacer,
   .date {
     height: var(--timeHeight);
   }
